# divine-invite-faucet

./: Cargo.toml  fastly.toml  rust-toolchain.toml
docs/plans/: 2026-02-25-invite-faucet-design.md
src/: auth.rs  codes.rs  error.rs  kv.rs  main.rs  types.rs
